base/apps/web-ui/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    alpha.image.policy.openshift.io/resolve-names: '*'
    app.openshift.io/connects-to: '[{"apiVersion":"apps/v1","kind":"StatefulSet","name":"gol-cluster-kafka"}]'
    deployment.kubernetes.io/revision: "1"
  labels:
    app: web-ui
    app.kubernetes.io/component: web-ui
    app.kubernetes.io/instance: web-ui
    app.kubernetes.io/name: web-ui
    app.kubernetes.io/part-of: gameoflife
    app.openshift.io/runtime: quarkus
  name: web-ui
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: web-ui
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: web-ui
        deploymentconfig: web-ui
    spec:
      containers:
      - image: web-ui:latest
        imagePullPolicy: IfNotPresent
        name: web-ui
        ports:
        - containerPort: 8080
          protocol: TCP
        - containerPort: 8443
          protocol: TCP
        - containerPort: 8778
          protocol: TCP
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
